<resources>
    <string name="app_name">My Application github user</string>
    <string name="title_favorite">favorite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search Username</string>
    <string name="tv_login">username</string>
    <string name="not_found">user not found</string>
    <string name="min_character_search">min insert 2 character</string>
    <string name="setting">setting</string>
    <string name="favorite">favorite</string>
    <string name="home">home</string>
    <string name="tv_jmlfollower">10</string>
    <string name="follower">Follower</string>
    <string name="jumlah_following">20</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="jumlah_repo">30</string>
    <string name="tv_username">username</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <string name="detail">User %1s</string>
    <string name="loading">please wait</string>
    <string name="user">user</string>
    <string name="errorr">error not found</string>
    <string name="detail_tab_following">Following</string>
    <string name="detail_tab_follower">Followers</string>
    <string name="button_favorite">button favorite</string>
</resources>